--- a/MemoryAnalyzer.csproj
+++ b/MemoryAnalyzer.csproj
@@ -56,6 +56,7 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="Commands\CloseWindowCommand.cs" />
+    <Compile Include="Statistics.cs" />
     <Compile Include="ViewModel.cs" />
     <Compile Include="ViewModelBase.cs" />
     <Page Include="MainWindow.xaml">
