--- a/MemoryAnalyzer.csproj
+++ b/MemoryAnalyzer.csproj
@@ -56,7 +56,8 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="Commands\CloseWindowCommand.cs" />
-    <Compile Include="Statistics.cs" />
+    <Compile Include="Statistics\Statistics.cs" />
+    <Compile Include="Statistics\TypeStatistics.cs" />
     <Compile Include="ViewModel.cs" />
     <Compile Include="ViewModelBase.cs" />
     <Page Include="MainWindow.xaml">
